objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_No_b__c</fullName>
        <formula>CASE(Network_Region__c, &quot;Hawaii&quot;, &quot;001&quot;, &quot;North CA&quot;, &quot;002&quot;, &quot;Los Angeles&quot;, &quot;003&quot;, &quot;Orange County&quot;, &quot;004&quot;, &quot;Santa Barbara&quot;, &quot;005&quot;, &quot;San Diego&quot;, &quot;006&quot;, &quot;Arizona&quot;, &quot;007&quot;, &quot;Chicago&quot;, &quot;008&quot;, &quot;Seattle&quot;, &quot;009&quot;,&quot;Portland&quot;, &quot;010&quot;, &quot;Washington DC&quot;, &quot;011&quot;, &quot;New Jersey&quot;, &quot;012&quot;, &quot;New York&quot;, &quot;013&quot;, &quot;Texas&quot;, &quot;014&quot;, &quot;Pennsylvania&quot;, &quot;015&quot;, &quot;Ohio&quot;, &quot;016&quot;, &quot;Kentucky&quot;, &quot;017&quot;, &quot;Utah&quot;, &quot;018&quot;, &quot;Connecticut&quot;, &quot;019&quot;, &quot;Colorado&quot;, &quot;020&quot;, &quot;Baltimore&quot;, &quot;021&quot;, &quot;Massachusetts&quot;, &quot;022&quot;, &quot;Boise&quot;, &quot;023&quot;,&quot;New England&quot;, &quot;024&quot;,&quot;Atlanta&quot;, &quot;025&quot;,&quot;XXX&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Region__c</fullName>
        <description>Network location (Region) that links to the appropriate network code.</description>
        <label>Network (Region)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>North CA</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Orange County</fullName>
                </value>
                <value>
                    <fullName>Santa Barbara</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>South FL</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Portland</fullName>
                </value>
                <value>
                    <fullName>Washington DC</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Pennsylvania</fullName>
                </value>
                <value>
                    <fullName>Ohio</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Utah</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>New England</fullName>
                </value>
                <value>
                    <fullName>Middle Atlantic</fullName>
                </value>
                <value>
                    <fullName>East North Central</fullName>
                </value>
                <value>
                    <fullName>West North Central</fullName>
                </value>
                <value>
                    <fullName>South Atlantic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phase</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Owner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Use this field to point to the Property Owner or REIT Account. Example: Macerich or GGP</description>
        <inlineHelpText>Use this field to point to the Property Owner or REIT Account. Example: Macerich or GGP</inlineHelpText>
        <label>Property Owner Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Site</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Site Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Property Owner Account)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <label>Site Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
</CustomObject>